@@ -54,7 +54,9 @@ label {
     color: $color-white;
 }
 
-.button {
+.button,
+a.button {
+    line-height: 1.2em;
     font-size: 1.5em;
     padding: 1.1em 2.4em;
     height: 3.5em;
