@@ -40,7 +40,7 @@
                     </div>
                 </li>
                 <li class="submit">
-                    <input type="submit" value="{% trans 'Reset password' %}" class="button" />
+                    <button type="submit" class="button">{% trans 'Reset password' %}</button>
                 </li>
             </ul>
         </form>
